Major refactor for the GUI
 * This is a mini rewrite of the ui,
 * Now supports adding multiple lists at once and exporting them at once,
 * The format used for storing lists is very simple for now
 * Zpl based printing will be also added in a future commit thanks to this
 * TODO: Move file dialogs to a Service
 * TODO: Do a general cleanup after this commit

--- a/LabelGenGUI/LabelGenGUI.csproj
+++ b/LabelGenGUI/LabelGenGUI.csproj
@@ -30,11 +30,23 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ImageSharpLabelGen\ImageSharpLabelGen.csproj" />
+    <ProjectReference Include="..\ShoeLabelGen.Common\ShoeLabelGen.Common.csproj" />
+
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Views\ErrorWindow.axaml.cs">
       <DependentUpon>ErrorWindow.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\InputView.axaml.cs">
+      <DependentUpon>InputView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ShoeListView.axaml.cs">
+      <DependentUpon>ShoeListView.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
