--- a/ImageSharpLabelGen/ImageSharpLabelGen.csproj
+++ b/ImageSharpLabelGen/ImageSharpLabelGen.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SharpIppNext" Version="1.0.5" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.3" />
     <ProjectReference Include="..\ShoeLabelGen.Common\ShoeLabelGen.Common.csproj" />
   </ItemGroup>
