Remove SharpIpp dependency  * It does not work with NativeAOT  * Self written extremely simple IPP implementation that only prints a document, i plan to implement status later  * Update Avalonia

--- a/ImageSharpLabelGen/ImageSharpLabelGen.csproj
+++ b/ImageSharpLabelGen/ImageSharpLabelGen.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SharpIppNext" Version="1.0.5" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.3" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.4" />
     <ProjectReference Include="..\ShoeLabelGen.Common\ShoeLabelGen.Common.csproj" />
+    <ProjectReference Include="..\MiniSharpIpp\MiniSharpIpp.csproj" />
   </ItemGroup>
 
 </Project>
