GUI: Experimental Android support
 * Disabled file operations for now, also the app is not really functional on Android at this moment.
 * The desktop version remains unaffected, so no harm in committing this as is.
 * I intend to make a Android specific UI in the future

--- a/LabelGenGUI/LabelGenGUI.csproj
+++ b/LabelGenGUI/LabelGenGUI.csproj
@@ -1,18 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <OutputType>WinExe</OutputType>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
-    <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)' != 'Debug'">
-    <PublishAot>true</PublishAot>
-    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,15 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.2.3" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.2.3" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.3" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.3" />
+    <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.3" />
-
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,18 +26,4 @@
     <ProjectReference Include="..\LabelGenGUI.Generators\LabelGenGUI.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Views\ErrorWindow.axaml.cs">
-      <DependentUpon>ErrorWindow.axaml</DependentUpon>
-    </Compile>
-    <Compile Update="Views\InputView.axaml.cs">
-      <DependentUpon>InputView.axaml</DependentUpon>
-    </Compile>
-    <Compile Update="Views\ShoeListView.axaml.cs">
-      <DependentUpon>ShoeListView.axaml</DependentUpon>
-    </Compile>
-    <Compile Update="Views\PrinterListView.axaml.cs">
-      <DependentUpon>PrinterListView.axaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
 </Project>
