--- a/ImageSharpLabelGen/ImageSharpLabelGen.csproj
+++ b/ImageSharpLabelGen/ImageSharpLabelGen.csproj
@@ -12,4 +12,19 @@
     <ProjectReference Include="..\MiniSharpIpp\MiniSharpIpp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Fonts.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Fonts.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Fonts.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Fonts.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
